Implemented myFirstMillion endpoint
